# aSPARK-graph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.spark/aspark-graph/: plan.md  qa-report.md  release-notes.md  review-report.md  spec.md
.spark/close-the-loop/: plan.md  release-notes.md  review-report.md  spec.md
.spark/distributable-install/: plan.md  release-notes.md  review-report.md  spec.md
.spark/gate-integration/: plan.md  release-notes.md  review-report.md  spec.md
.spark/go-rust-support/: plan.md  release-notes.md  review-report.md  spec.md
.spark/incremental-builds/: plan.md  release-notes.md  review-report.md  spec.md
.spark/robustness/: plan.md  release-notes.md  review-report.md  spec.md
docs/: aspark-integration.md
src/aspark_graph/: __init__.py  artifacts.py  build.py  cli.py  git.py  graph.py  inference.py  model.py  parse_cache.py  queries.py  server.py
src/aspark_graph/extractors/: __init__.py  base.py  code_go.py  code_java.py  code_py.py  code_rust.py  code_ts.py
tests/: conftest.py  test_artifacts.py  test_build.py  test_cli_mcp_parity.py  test_extractor_go.py  test_extractor_java.py  test_extractor_rust.py  test_extractor_ts.py  test_gate_health.py  test_git.py  test_graph.py  test_headline.py  test_impact.py  test_impact_diff.py  test_incremental.py  test_incremental_bench.py  test_inference.py  test_integration_docs.py  test_link_conventions.py  test_mcp_errors.py  test_mcp_transport.py  test_navigation.py  test_readme.py  test_smoke.py  test_staleness.py  test_story_trace.py  test_story_trace_inference.py  test_walking_skeleton.py
tests/fixtures/code/: sample.py
tests/fixtures/sample_repo/.spark/demo/: plan.md  qa-report.md  release-notes.md  review-report.md  spec.md
tests/fixtures/sample_repo/src/demo/: app.py  util.py
